# 2022-2023

./: 2022-2023  CMakeLists.txt  README.md  ROS Instructions  benji.txt  cmd_thruster.msg  cv_camera_viewer.py  cv_save_image.py  rov.launch  throttle_mixing.cpp  thrusters.ino
2022-2023/: ReadMe
2022-2023/Thruster 1/: DataAnalysis.m  Thruster 1.xlsx  Thruster1_Trial1.csv  Thruster1_Trial3.csv  Thruster1_Trial5.csv
Arduino/: rov.ino
Arduino/Temperature_Sensor_Code/: TemperatureSensorPublisher.ino  Temperature_Sensor_Code.ino
Arduino/combined/: combined.ino  ros.h
Arduino/imu/rotation_vector/: imu_accelerometer_rotation.ino  rotation_vector.ino
Arduino/libraries/Adafruit_BNO08x_RVC/: Adafruit_BNO08x_RVC.cpp  Adafruit_BNO08x_RVC.h  README.md  library.properties
Arduino/libraries/ros_lib/: ros.h
Arduino/libraries/ros_lib/gazebo_msgs/: ApplyBodyWrench.h
Arduino/libraries/ros_lib/ros/: node_handle.h
Arduino/libraries/ros_lib/rov/: cmd_thruster.h  imu.h
Arduino/rov/: rov.ino
Arduino/sketchbook/Temp_sen_publish/: Temp_sen_publish.ino
Arduino/sketchbook/Temperature_Sensor_Code/: Temperature_Sensor_Code.ino
Arduino/sketchbook/Thruster_Control/: Thruster_Control.ino
Arduino/sketchbook/combined/: ArduinoHardware.h  combined.ino
Arduino/sketchbook/combined_no_temp/: ArduinoHardware.h  combined_no_temp.ino  node_handle.h  ros.h
Arduino/sketchbook/imu_accelerometer_rotation.ino/: imu_accelerometer_rotation.ino.ino
Arduino/sketchbook/rov/: rov.ino
Arduino/thrusters/: thrusters.ino
Test-Stand-Data/: C_V_Analyze.m  DataAnalysis.m  P_Analyze.m  Thruster1_Trial2.csv  Thruster1_Trial4.csv
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py
catkin_ws/devel/include/controller/: ControllerConfig.h
catkin_ws/devel/include/pid/: PidConfig.h
catkin_ws/devel/include/rov/: cmd_thruster.h  imu.h
catkin_ws/devel/lib/controller/: joy_repub  throttle_mixer
catkin_ws/devel/lib/cv_camera/: cv_camera_node
catkin_ws/devel/lib/joy/: joy_node
catkin_ws/devel/lib/pid/: autotune  controller  plant_sim  setpoint_node  sim_time
catkin_ws/devel/lib/pkgconfig/: camera.pc  controller.pc  joy.pc  (+4 more)
catkin_ws/src/beginner_tutorials/: package.xml
catkin_ws/src/controller/: CMakeLists.txt
catkin_ws/src/controller/cfg/: Controller.cfg
catkin_ws/src/controller/include/: ControllerConfig.h  throttle_mixer.h
catkin_ws/src/controller/launch/: controller.launch
catkin_ws/src/controller/params/: parameters.yaml
catkin_ws/src/controller/rqt_config/: controller.perspective
catkin_ws/src/controller/src/: joy_repub.cpp  throttle_mixer.cpp
catkin_ws/src/pid/: CMakeLists.txt
catkin_ws/src/rov/: CMakeLists.txt  package.xml  package.xml.save
rov/: CMakeLists.txt  package.xml
rov/launch/: pi.launch
(+56 files in other folders)
